fix: resolve issue with wrong color notation

--- a/src/app/(home)/changePassword/changePassword.module.scss
+++ b/src/app/(home)/changePassword/changePassword.module.scss
@@ -137,7 +137,7 @@
 	width: 100%;
 	height: 52px;
 	padding: 10px;
-	border: 1px solid #ccc;
+	border: 1px solid var(--color-chinese-silver);
 	border-radius: 8px;
 	box-sizing: border-box;
 	margin-top: 2px;
@@ -187,7 +187,7 @@
 	font-size: 1.3rem;
 	font-weight: 400;
 	line-height: 1.8rem;
-	color: rgba(156, 157, 157, 1);
+	color: var(--color-ash-grey);
 	margin-bottom: 20px;
 
 	@media (max-width: 540) {
@@ -204,7 +204,7 @@
 	width: 420px;
 	height: 52px;
 	background-image: linear-gradient(rgba(255, 212, 92, 1), rgba(236, 145, 40, 1));
-	color: rgba(23, 25, 26, 1);
+	color: var(--color-eerie-black);
 	margin: 40px 0px;
 	border: none;
 	border-radius: 12px;
