--- a/src/components/mainLayout/changePasswordModal/changePasswordModal.module.scss
+++ b/src/components/mainLayout/changePasswordModal/changePasswordModal.module.scss
@@ -1,6 +1,6 @@
 .backgroundModal {
 	position: fixed;
-	background: rgba(0, 0, 0, 0.7);
+	background: var(--color-black-two-of-third);
 	width: 100%;
 	height: 100vh;
 	top: 0;
@@ -15,7 +15,6 @@
 	height: 324px;
 	border-radius: 12px;
 	background: var(--color-pure-light);
-
 
 	@media (max-width: 540) {
 		& {
