--- a/src/components/mainLayout/signUpForm/signUpForm.module.scss
+++ b/src/components/mainLayout/signUpForm/signUpForm.module.scss
@@ -5,13 +5,27 @@
 	width: 550px;
 	height: 720px;
 	background-color: var(--color-pure-light);
-	box-shadow: 0px 4px 20px 0px var(--color-black);
+	box-shadow: 0px 4px 20px 0px var(--color-black-eight-part);
 	border-radius: 12px;
+
+	@media (max-width: 550px) {
+		& {
+			width: 332px;
+			height: 530px;
+		}
+	}
 }
 
 .signUpFormContainer {
 	max-width: 420px;
 	padding: 62px 0;
+
+	@media (max-width: 550px) {
+		& {
+			max-width: 300px;
+			padding: 24px 0 32px 0;
+		}
+	}
 }
 
 .dividerWrap {
@@ -26,6 +40,12 @@
 	background-color: var(--color-gainsboro);
 	z-index: 10;
 	width: 170px;
+
+	@media (max-width: 550px) {
+		& {
+			width: 110px;
+		}
+	}
 }
 
 .dividerWrap__subtitle {
@@ -34,6 +54,12 @@
 	font-size: 2.2rem;
 	font-weight: 400;
 	color: var(--color-eerie-black);
+
+	@media (max-width: 550px) {
+		& {
+			font-size: 1.6rem;
+		}
+	}
 }
 
 .signUpFormContainer__auth {
@@ -41,6 +67,12 @@
 	font-weight: 400;
 	color: var(--color-eerie-black);
 	text-align: center;
+
+	@media (max-width: 550px) {
+		& {
+			font-size: 1.3rem;
+		}
+	}
 }
 
 .signUpFormContainer__auth_link {
@@ -53,32 +85,10 @@
 	margin: 15px 0 32px 0;
 	display: flex;
 	justify-content: space-between;
-}
 
-@media screen and (max-width: 550px) {
-	.signUpFormWrap {
-		width: 332px;
-		height: 530px;
-	}
-
-	.signUpFormContainer {
-		max-width: 300px;
-		padding: 24px 0 32px 0;
-	}
-
-	.dividerWrap__line {
-		width: 110px;
-	}
-
-	.dividerWrap__subtitle {
-		font-size: 1.6rem;
-	}
-
-	.signUpFormContainer__auth {
-		font-size: 1.3rem;
-	}
-
-	.actionWrap {
-		margin: 10px 0 20px 0;
+	@media (max-width: 550px) {
+		& {
+			margin: 10px 0 20px 0;
+		}
 	}
 }
